# vcpkg-cmake-starter

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md
src/: main.cpp
